2003-11-07  Per Bothner  <pbothner@apple.com>

	* c-opts.c (finish_options):  Move cpp_find_main_file earlier, so
	parse_in's main_file is set.

2003-11-07  Per Bothner  <pbothner@apple.com>

	* c-decl.c (duplicate_decls):  Don't modify olddecl.  Instead, merge
	olddecl's info into newdecl.
	(pushdecl):  Return (except for PARM_DECL) the new decl.
	(c_write_global_declarations):  Skip old declaration.

2003-11-07  Per Bothner  <pbothner@apple.com>

	* c-decl.c (start_struct):  Increment currently_nested.
	(finish_struct):  Decrement currently_nested.

2003-11-05  Per Bothner  <pbothner@apple.com>

	* c-common.c (create_builtins_fragment):  Copy name.

	* c-common.c (register_fragment_dependency):  Don't register
	dependency on builtins_c_fragment.

	* c-common.c (cb_enter_fragment):  Set input_location.
	Remove some bogus messages, and improve text for others.
	Use 'inform' instead of 'warning' on fragment reuse and invalidation.
	(cb_exit_fragment):  Likewise.

2003-11-05  Per Bothner  <pbothner@apple.com>

	* dwarf2out.c (init_done, frame_init_done):  New statics.
	(dwarf2out_frame_init, init_file_table, dwarf2out_init):  Reset
	tables if called a second time for compile server.
	(dwarf2out_finish):  Reset various static counters etc.
	(NOTE_MODIFIED_TREE):  New macro.
	(equate_type_number_to_die, gen_enumeration_type_die,
	gen_struct_or_union_type_die, gen_typedef_die, gen_type_die):  Use it.

2003-10-29  Mike Stump  <mrs@apple.com>

	* c-common.c (builtins_c_fragment): Mark for PCH.
	(output_c_fragment): Likewise.
	(current_fragment_deps_end): Likewise.
	(include_fragments): Add.
	(restore_fragment): Add code to output remembered asm code
	associated with the fragment.
	(cb_enter_fragment): Use FRAGMENT_CHAIN instead of TREE_CHAIN.
	Add code to remember the start of the asm code output.
	(xfseek): Add.
	(cb_exit_fragment): Add code to save off the asm code that was
	output during fragment processing.
	* c-common.h (FRAGMENT_CHAIN): Add.