@@ -1,3 +1,8 @@
+2003-11-23  Per Bothner  <pbothner@apple.com>
+
+	* c-format.c (init_dynamic_diag_info):  An identifier may exist yet
+	not have a global value, e.g. when the compiler sercer sees a new file.
+
 2003-11-07  Per Bothner  <pbothner@apple.com>
 
 	* c-opts.c (finish_options):  Move cpp_find_main_file earlier, so
